# gepa-metaharness

./: .editorconfig  .gitignore  BENCHMARKS.md  BENCHMARK_RESULTS.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: architecture.md  benchmarks.md  cli-reference.md  experiments.md  getting-started.md  index.md  providers.md
docs/stylesheets/: extra.css
examples/experiment_configs/: fake-benchmarks.json
examples/python_cli_benchmark/: README.md  metaharness.json  tasks.json
examples/python_cli_benchmark/baseline/: GEMINI.md
examples/python_fixture_benchmark/: README.md  metaharness.json  tasks.json
examples/python_fixture_benchmark/baseline/: AGENTS.md
examples/ticket_router/: README.md  dataset.json  run.py
examples/ticket_router/baseline/: router.py
src/gepa_metaharness/: api.py  bootstrap.py  cli.py  gepa_runner.py  models.py  scaffold.py
src/metaharness/: __init__.py  api.py  bootstrap.py  cli.py  experiment_config.py  experiments.py  models.py  reporting.py  scaffold.py
tests/: test_bootstrap.py  test_candidate_outcomes.py  test_cli.py  test_codex_parser.py  test_codex_timeout.py  test_coding_tool_config.py  test_engine_fake_backend.py  test_experiments.py  test_gemini_parser.py  test_gemini_timeout.py  test_instructions.py  test_live_codex_smoke.py  test_opencode_parser.py  test_opencode_timeout.py  test_pi_parser.py  test_pi_timeout.py  test_python_cli_benchmark.py  test_python_fixture_benchmark.py  test_reporting.py  test_ticket_router_example.py
(+43 files in other folders)
