[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gepa-metaharness"
version = "0.1.0"
description = "Meta-Harness architecture adapted for GEPA trading signal genome optimization. Forked from SuperagenticAI/metaharness."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Gideon / NEXUS" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industries",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Financial",
]
keywords = ["gepa", "trading", "signal", "genome", "optimization", "meta-harness", "evolution"]
dependencies = []

[project.optional-dependencies]
dev = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.6,<10",
]

[project.scripts]
gepa-ge = "gepa_metaharness.cli:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
